# azure-devops-filler

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
docs/: cli.md  configuration.md  getting-started.md  sources.md
src/azure_devops_filler/: __init__.py  cli.py  config.py  dedup.py  models.py
src/azure_devops_filler/clients/: __init__.py  azure_devops.py  llm.py  microsoft_graph.py
src/azure_devops_filler/sources/: __init__.py  base.py  git.py  outlook.py  recurring.py
tests/: test_clients_azure_devops.py  test_clients_llm.py  test_dedup.py  test_models.py  test_sources_recurring.py
